fixed overflow in aboutUs

--- a/assets/css/aboutUs.css
+++ b/assets/css/aboutUs.css
@@ -215,6 +215,7 @@ header {
 
 .slider__container {
     position: relative;
+    overflow: hidden;
 }
 
 .slider__img {
